# task-tray

./: .gitignore  README.md  default.yaml  install.py  main.py  pyproject.toml
default_config/: linux-gnome.yaml  linux-hyperland.yaml  linux-kde.yaml  mac.yaml  win.yaml
test/: config.yaml
